--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(task LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(task src/main.cpp)
+file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.h")
+
+add_executable(task ${SOURCES})
