Add unit tests and CMake configuration for testing framework
- Introduced CMake configuration to build unit tests with GoogleTest.
- Added unit tests for Client, Place, Club, Event, Parser, and Time classes.
- Implemented various test cases to validate functionality and error handling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.hpp")
 
 add_executable(task ${SOURCES})
+
+option(BUILD_TESTS "Build unit tests" ON)
+if(BUILD_TESTS)
+    enable_testing()
+    
+    include(FetchContent)
+    FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/release-1.12.1.zip
+    )
+    FetchContent_MakeAvailable(googletest)
+    
+    add_subdirectory(tests)
+endif()
